--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 		<header id="fh5co-header-section" class="sticky-banner">
 			<div class="container">
 				<div class="nav-header">
-					<img src="/images/logo.jpg" alt="Logo" width="100px" style="float:left;">
+					<img src="/images/logos.png" alt="Logo" width="100px" style="float:left;">
 					<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
 					<h1 id="fh5co-logo"><a href="index.html">Bharat Help Mission</a></h1>
 					<!-- START #fh5co-menu-wrap -->
