--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<meta name="robots" content="index, follow">
 	<meta name="googlebot" content="index, follow">
 	<meta name="google" content="nositelinkssearchbox">
-	<meta property="og:title" content="Bharat help mission - A Premier NGO">
+	<meta property="og:title" content="Bharat help mission">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://bharathelpmission.com">
 	<meta property="og:image" content="https://bharathelpmission.com/images/overview.png">
