--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 				<div class="nav-header">
 					<img src="/images/logos.png" alt="Logo" width="100px" style="float:left;">
 					<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
-					<h1 id="fh5co-logo"><a href="index.html">Payment Pending Call: 8708910731 to Retrieve the website</a></h1>
+					<h1 id="fh5co-logo"><a href="index.html">Bharat Help Mission</a></h1>
 					<!-- START #fh5co-menu-wrap -->
 					<nav id="fh5co-menu-wrap" role="navigation">
 						<ul class="sf-menu" id="fh5co-primary-menu">
